--- a/css/cambios.css
+++ b/css/cambios.css
@@ -105,6 +105,59 @@
   border-radius: 5px ;
 }
 
+.whatsapp-btn {
+  background-color: #25d366;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  line-height: 60px;
+  text-align: center;
+  position: fixed;
+  bottom: 20px;
+  left: 20px; /* Cambia 'right' a 'left' */
+  cursor: pointer;
+  z-index: 999;
+}
+
+/* Estilo para el contenedor del formulario */
+.whatsapp-form-container {
+  display: none;
+  position: fixed;
+  bottom: 100px;
+  left: 20px; /* Cambia 'right' a 'left' */
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #25d366;
+  border-radius: 5px;
+  z-index: 999;
+}
+
+/* Estilo para el formulario */
+.whatsapp-form {
+  display: flex;
+  align-items: center;
+}
+
+.whatsapp-input {
+  flex: 1;
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  margin-right: 8px;
+}
+
+.whatsapp-send-btn {
+  background-color: #25d366;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+
 .bar {
   width: 0;
   height: 100%;
